# Conduit-Chat

./: .gitignore  README.md  docker-compose.example.yml  run.bat
.github/workflows/: docker-publish.yml
android/: README.md
docs/: API.md  AUTHENTICATION.md  CONFIGURATION.md  DATA_MODEL.md  INTEGRATION.md  README.md  WEBSOCKET.md  llms.txt
server/: .env.example  Dockerfile  README.md  conduit.db  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
server/conduit/: __init__.py  auth.py  config.py  database.py  deps.py  main.py  schemas.py  websocket.py
server/conduit/routers/: admin.py  auth.py  dms.py  rooms.py  setup.py  ws.py
web/: README.md  app.js  index.html  style.css
